# wavpatch

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml  pythonpublish.yml
data/share/man/man1/: wavpatch.1
docs/source/: conf.py  index.rst
wavpatch/: __init__.py
