[build-system]
requires = [
    "flit_core >= 3.2,<4",
]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "wavpatch"

[tool.flit.external-data]
directory = "data"

[tool.pyright]
typeCheckingMode = "basic"

[tool.pylint]
max-line-length = 80
disable = [
    "C0103",
    "C0114",
    "C0115",
    "C0116",
    "R0903",
    "R0913",
    "W0105",
]

[project]
name = "wavpatch"
authors = [
    { name = "Jamie Hardt", email = "jamiehardt@gmail.com" },
]
readme = "README.md"
dynamic = [
    "version",
    "description",
]
requires-python = "~=3.8"
dependencies = []
keywords = [
    "audio",
    "multimedia",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Editors",
]

[project.optional-dependencies]
doc = [
    "sphinx >= 5.3.0",
    "sphinx_rtd_theme >= 1.1.1",
]

[project.urls]
Home = ""
Documentation = ""
Source = ""
Issues = ""

[project.scripts]
wavpatch = "wavpatch.__main__:main"
